[package]
name = "dyn_map"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
eframe = {version = "0.32.1", features = ["wgpu"]}
egui_extras = {version = "0.32.1", features = ["all_loaders"]}
ehttp = {version = "0.5.0", features = ["json"]}
env_logger = "0.11.8"
image = {version = "0.25.6", features = ["png", "jpeg"]}
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
sqlite = "0.37.0"
