[package]
name = "dyn_map"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
app_dirs = {version = "2.5.5", package = "app_dirs2"}
chrono = "0.4.42"
eframe = {version = "0.32.1", features = ["wgpu"]}
egui_extras = {version = "0.32.1", features = ["all_loaders"]}
env_logger = "0.11.8"
image = {version = "0.25.6", features = ["png", "jpeg"]}
include_assets = "1.0.0"
log = "0.4.27"
rfd = "0.15.4"
ron = "0.10.1"
serde = {version = "1.0.219", features = ["derive"]}
sqlite = "0.37.0"
